# rust-stm32

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: main.rs
